# Pythia

./: .env.example  .gitattributes  .gitignore  Cargo.toml  PLAN.md  README.md  SAFETY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
crates/pythia-core/: Cargo.toml
crates/pythia-core/src/: alerts.rs  claude.rs  lib.rs  llm.rs  marketdata.rs
crates/pythia-core/src/connectors/: alpaca.rs  mod.rs
crates/pythia-core/src/engine/: mod.rs  strategies.rs
docs/: LIVE-RUN.md
scripts/: clean-env.mjs  shots.mjs
server/: Cargo.toml
server/src/: main.rs
src/: App.css  App.tsx  ai.ts  api.ts  live.ts  main.tsx  nav.tsx  store.tsx  types.ts  window.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  marketdata.rs  persist.rs  state.rs  tray.rs  vault.rs
src-tauri/src/connectors/: alpaca.rs  crypto.rs  mod.rs  paper.rs  polymarket.rs
src-tauri/src/engine/: composed.rs  indicators.rs  mod.rs  risk.rs  strategies.rs
src/components/: ErrorBoundary.tsx  LegalGate.tsx  ui.tsx
src/engine/: backtest.ts  client.ts  composedRules.ts  composer.ts  index.ts  indicators.ts  marketSim.ts  optimize.ts  paperEngine.ts  risk.ts  serverEngine.ts  strategies.ts  tauriEngine.ts
src/lib/: correlation.ts
src/pages/: About.tsx  Analytics.tsx  Backtest.tsx  Composer.tsx  Correlation.tsx  Dashboard.tsx  Journal.tsx  Live.tsx  Markets.tsx  Optimizer.tsx  Positions.tsx  Risk.tsx  Settings.tsx  Signals.tsx  Strategies.tsx
