[package]
name = "pythia-server"
version = "0.4.0"
edition = "2021"
rust-version = "1.82"
description = "Pythia standalone backend: HTTP + WebSocket over the shared engine core."

[[bin]]
name = "pythia-server"
path = "src/main.rs"

[dependencies]
pythia-core = { path = "../crates/pythia-core" }

axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15" # load keys from a local .env so nothing lives in shell history
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
