[package]
name = "pythia"
version = "0.1.0"
description = "Autonomous multi-venue prediction & trading cockpit"
authors = ["SenseiIssei"]
edition = "2021"
rust-version = "1.82"

[lib]
name = "pythia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Phase 2+ (uncomment as live execution lands):
# rusqlite = { version = "0.32", features = ["bundled"] }   # persistent journal
# keyring = "3"                                             # OS keychain secrets vault

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
