[package]
name = "pythia"
version = "0.4.0"
description = "Autonomous multi-venue prediction & trading cockpit"
authors = ["SenseiIssei"]
edition = "2021"
rust-version = "1.82"

[lib]
name = "pythia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# The shared engine brain — strategies, risk, connectors, market data, vault,
# alerts, and the Claude signal provider all live here now.
pythia-core = { path = "../crates/pythia-core" }

tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Phase 2+ (uncomment as live execution lands):
# rusqlite = { version = "0.32", features = ["bundled"] }   # persistent journal

# NOTE: [profile.release] now lives in the workspace-root Cargo.toml — per-member
# profiles are ignored in a workspace.
